--- a/exercises/technicolor-lorem-ipsum/css/style.css
+++ b/exercises/technicolor-lorem-ipsum/css/style.css
@@ -106,3 +106,48 @@ body {
 #span-20 {
     color: rgba(9, 9, 173, 0.397);
 }
+
+#paragraph-6 {
+    background-color: rgb(144, 22, 231);
+}
+
+#span-21 {
+    color: indigo;
+}
+
+#span-22 {
+    color: rgba(76, 0, 130, 0.835);
+}
+
+#span-23 {
+    color: rgba(76, 0, 130, 0.569);
+}
+
+#span-23 {
+    color: rgba(76, 0, 130, 0.62);
+}
+
+#span-24 {
+    color: rgba(76, 0, 130, 0.459);
+}
+
+#paragraph-7 {
+    background-color: violet;
+}
+
+#span-25 {
+    color: rgb(208, 48, 208);
+}
+
+#span-26 {
+    color: rgb(208, 48, 208, 0.863);
+}
+
+#span-27 {
+    color: rgb(208, 48, 208, 0.598);
+}
+
+#span-28 {
+    color: rgba(208, 48, 208, 0.359);
+}
+
