--- a/exercises/technicolor-lorem-ipsum/css/style.css
+++ b/exercises/technicolor-lorem-ipsum/css/style.css
@@ -6,7 +6,7 @@ body {
     margin: 0px;
     font-family: sans-serif;
 }
-
+/* red line */
 #paragraph-1 {
     background-color: rgba(184, 15, 15, 0.964);
 }
@@ -30,7 +30,7 @@ body {
 #paragraph-2 {
     background-color: orangered;
 }
-
+/* orange-line */
 #span-5 {
     color: rgb(255, 140, 0);
 }
@@ -46,7 +46,7 @@ body {
 #span-8 {
     color: rgba(255, 140, 0, 0.321);
 }
-
+/* yellow-line */
 #paragraph-3 {
     background-color: rgb(255, 225, 31);
 }
@@ -66,7 +66,7 @@ body {
 #span-12 {
     color: rgba(255, 255, 0, 0.42);
 }
-
+/* green-line */
 #paragraph-4 {
     background-color: green;
 }
@@ -86,7 +86,7 @@ body {
 #span-16 {
     color: rgba(82, 255, 82, 0.429);
 }
-
+/* blue-light */
 #paragraph-5 {
     background-color: blue;
 }
@@ -106,7 +106,7 @@ body {
 #span-20 {
     color: rgba(9, 9, 173, 0.397);
 }
-
+/* indigo-line */
 #paragraph-6 {
     background-color: rgb(144, 22, 231);
 }
@@ -130,7 +130,7 @@ body {
 #span-24 {
     color: rgba(76, 0, 130, 0.459);
 }
-
+/* violet-line */
 #paragraph-7 {
     background-color: violet;
 }
@@ -150,4 +150,29 @@ body {
 #span-28 {
     color: rgba(208, 48, 208, 0.359);
 }
+#span-29 {
+    font-weight: bolder;
+}
+
+#span-30 {
+    font-weight: lighter;
+}
+
+#span-31 {
+    font-style: italic;
+}
+
+#span-32 {
+    font-style: oblique;
+}
+
+#span-33 {
+    text-decoration: underline;
+}
+
+#span-34 {
+    text-decoration: line-through;
+}
+
+
 
