floating-palette-update

--- a/exercises/floating-color-palette/css/style.css
+++ b/exercises/floating-color-palette/css/style.css
@@ -32,7 +32,7 @@ body {
     padding: 24px;
 }
 
-#body-color {
+body {
     background-color: rgb(255, 238, 215);
 }
 
@@ -59,4 +59,3 @@ body {
 #color-9 {
     background-color: #E6AA68;
 }
-
