--- a/exercises/upside-down-tetris/css/style.css
+++ b/exercises/upside-down-tetris/css/style.css
@@ -20,7 +20,7 @@ body {
     height: 100px;
     background-color: lightgray;
     border-width: 20px;
-    border-style: outset
+    border-style: outset;
 }
 
 .red {
