--- a/projects/bulletin-board/css/style.css
+++ b/projects/bulletin-board/css/style.css
@@ -9,15 +9,26 @@
 
 .post-it {
     display: inline-block;
-    background-color: lightgray;
+    background-color: rgb(242, 237, 237);
     margin: 24px;
     padding: 24px;
-    vertical-align: top;
-    font-family:
-        'Lucida Sans', 'Lucida Sans Regular', 
-        'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    width: 200px;
-    height: 200px;
+    vertical-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    width: 150px;
+    height: 150px;
+    font-size: 12px;
+    box-shadow: 2px 2px 8px;
+    
+}
+
+.thumbnail {
+    background-color: silver;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    box-shadow: 1px 1px 1px;
+    padding: 0px;
+    display: inline-block;
 }
 
 .yellow {
@@ -26,15 +37,40 @@
 
 .blue {
     background-color: rgb(116, 217, 251);
-    margin: 50px;
 }
 
 .green {
     background-color: lightgreen;
+    padding: 10px;
 }
 
 .image {
-    width: 175px;
-    height: 175px:
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+}
 
+h3 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
+}
+
+#max {
+    transform: rotate(5deg);
+}
+
+#positive {
+    transform: rotate(-5deg);
+}
+
+#groceries {
+    transform: rotate(-10deg);
+}
+
+#week-list {
+    transform: rotate(10deg);
 }
