--- a/projects/bulletin-board/css/style.css
+++ b/projects/bulletin-board/css/style.css
@@ -12,7 +12,7 @@
     background-color: rgb(242, 237, 237);
     margin: 24px;
     padding: 24px;
-    vertical-align: center;
+    vertical-align: top;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     width: 150px;
     height: 150px;
@@ -27,8 +27,10 @@
     height: 20px;
     border-radius: 50%;
     box-shadow: 1px 1px 1px;
-    padding: 0px;
-    display: inline-block;
+}
+
+.center {
+    text-align: center;
 }
 
 .yellow {
