--- a/exercises/three-profile-cards/css/style.css
+++ b/exercises/three-profile-cards/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -22,13 +24,32 @@ body {
 .card img {
     width: 200px;
     height: 150px;
-    border-radius: 70%;
+    border-radius: 50%;
     object-fit: cover;
+    border: 1px solid rgb(165, 93, 11);
 }
 
 .card h3 {
     font-size: 36px;
     margin-top: 24px;
+    font-family: "MedievalSharp", cursive;
+}
+
+.card p {
+    font-family: "Texturina", serif;
+}
+
+.card a {
+    background-color: rgb(165, 93, 11);
+    text-decoration: none;
+    color: black;
+    padding: 16px;
+    margin: 16px;
+    display: inline-block;
+    border-radius: 50px;
+    box-shadow: 0px 0px 18px rgb(165, 93, 11);
+    font-family: "Texturina", serif;
+
 }
 
 .card {
@@ -39,4 +60,5 @@ body {
     margin: 36px 24px;
     box-shadow: 0px 0px 36px black;
     width: 300px;
+    border-radius: 50px;
 }
