--- a/exercises/side-by-side-recipes/css/style.css
+++ b/exercises/side-by-side-recipes/css/style.css
@@ -20,12 +20,14 @@ body {
     border-top: 2px solid black;
     border-bottom: 2px solid black;
     align-items: center;
-    padding: 50px;
+    padding: 50px 0px;
     margin-bottom: 50px;
 }
 
 #side-by-side-1 .image-container img {
     width: 100%;
+    height: 425px;
+    object-fit: cover;
 }
 
 #side-by-side-1 .image-container {
@@ -37,6 +39,14 @@ body {
     flex: 1;
 }
 
+/* recipe times flexbox and CSS */
+
+.text-container .recipe-times {
+    display: flex;
+    gap: 25px;
+    margin: 8px 0px;
+}
+
 /* 3 card CSS */
 
 #side-by-side-2 {
@@ -46,11 +56,23 @@ body {
 
 #side-by-side-2 .images img {
     width: 100%;
+    height: 400px;
+    object-fit: cover;
 }
 
 #side-by-side-2 .images {
     font-size: 20px;
     text-align: center;
+    flex: 1;
+}
+.button {
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    padding: 9px 18px;
+    margin-top: 16px;
+    transition: background-color 0.5s, color 0.5s;
 }
 
 /* other CSS */
@@ -59,12 +81,11 @@ h2 {
     text-align: center;
     font-size: 36px;
 }
-
-#side-by-side-1 a {
-    background-color: black;
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-    padding: 9px 18px;
-    margin-top: 16px;
+ 
+label {
+    font-weight: bold;
+}
+.button:hover {
+    background-color: wheat;
+    color: black;
 }
