--- a/exercises/site-scaffolding/css/style.css
+++ b/exercises/site-scaffolding/css/style.css
@@ -9,15 +9,13 @@ body {
     font-family: "Wellfleet", serif;
 }
 
+/* navabar css */
 #navbar {
-    display: flex;
     background: linear-gradient(
         to bottom, 
         rgb(241, 169, 0), 
         rgb(251, 232, 67)
     );
-    justify-content: space-between;
-    align-items: center;
     position: sticky;
     top: 0px;
 }
@@ -29,7 +27,7 @@ body {
 }
 
 #navbar #logo-container {
-    margin-right: auto;
+    /* margin-right: auto; */
     font-family: "Henny Penny", system-ui;
     font-size: 52px;
     font-weight: bold;
@@ -56,3 +54,62 @@ body {
     margin: 0px 24px;
     border-radius: 36px;
 }
+
+#navbar .single-column {
+    margin: 0px auto;
+    align-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* hero css */
+
+#homepage-content #hero {
+    background-image: url(
+        https://platform.vox.com/wp-content/uploads/sites/2/2025/02/goodnews_1920x1280.png?quality=90&strip=all&crop=0,0,100,100
+    );
+    height: 50vh;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* margin-top: 24px; */
+}
+
+#three-card-single-column {
+    margin: 100px auto;
+    max-width: 800px;
+}
+
+#card-container {
+    display: flex;
+    justify-content: center;
+    gap: 28px;
+}
+
+#card-container .three-cards img {
+    width: 250px;
+    height: 200px;
+    object-fit: cover;
+
+}
+
+#card-container .three-cards {
+    flex: 1;
+    background-color: rgb(251, 232, 67);
+}
+
+#three-card-single-column h2 {
+    font-size: 36px;
+    text-align: center;
+    font-family: "Henny Penny" system-ui;
+    margin-top: 24px;
+    color: rgb(241, 169, 0);
+}
+
+/* content single column layout CSS */
+
+
+
