--- a/projects/mebay-product-page/css/style.css
+++ b/projects/mebay-product-page/css/style.css
@@ -112,7 +112,7 @@ body {
 #sidebar-column #product-info-container a {
     color: black;
 }
-
+/* price and condition CSS */
 #sidebar-column #price h3 {
     font-size: 36px;
     margin: 0px;
@@ -128,6 +128,8 @@ body {
 #sidebar-column #price span {
     margin-top: 16px;
     display: block;
+    border-bottom: 1px solid lightgray;
+    padding-bottom: 20px;
 }
 
 #sidebar-column #quantity {
@@ -146,6 +148,7 @@ body {
     min-width: 68px;
 }
 
+/* button CSS */
 #sidebar-column #buttons a {
     display: block;
     border-radius: 24px;
@@ -170,10 +173,11 @@ body {
 }
 
 #sidebar-column #buttons a.sub-buttons:hover {
-    background-color: rgba(0, 123, 255, 0.326)
+    background-color: rgba(0, 123, 255, 0.326);
 }
 
 #sidebar-column #buttons a#buy-now:hover {
     
     background-color: rgba(0, 123, 255, 0.326);
+    color: rgb(0, 123, 255);
 }
