--- a/projects/final-eval/css/style.css
+++ b/projects/final-eval/css/style.css
@@ -1,8 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 * {
     box-sizing: border-box;
 }
 
 body {
     margin: 0px;
-    font-family: sans-serif;
+    font-family: "Sansation", sans-serif;
+    background-color: rgb(0, 0, 26);
+}
+
+#single-column {
+    margin: 24px auto;
+    width: 900px;
+    text-align: center;
+    border: 2px solid gold;
+    background-image: url(../images/footballfield2.webp);
+}
+
+#main-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 36px;
+    color: white;
+}
+
+#header {
+    color: white;
+}
+
+#header h4 {
+    font-weight: lighter;
+    font-size: 20px;
+    margin-bottom: 12px;
+}
+
+#header h1 {
+    font-size: 52px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    color: gold;
+    text-shadow: 0px 2px 8px black;
+}
+
+#header h3 {
+    font-size: 28px;
+    margin-top: 0px;
+}
+
+#main-content .cards img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    margin: 0px 24px;
+}
+
+#main-content span {
+    color: gold;
+    font-size: 36px;
+    font-weight: bolder;
+    text-shadow: 0px 2px 8px black;
+}
+
+#main-content .cards h3 {
+    color: gold;
+    font-size: 28px;
+}
+
+#bottom-content {
+    color: white;
+}
+
+#bottom-content .buttons {
+    display: inline-block;
+    background-color: gold;
+    color: rgb(0, 0, 26);
+    border: 2px solid rgb(0, 0, 26);
+    padding: 28px;
+    margin: 24px 20px;
+    border-radius: 28px;
+    font-weight: bolder;
+}
+
+#bottom-content h2 {
+    font-size: 40px;
+    color: gold;
+    text-shadow: 0px 2px 8px black;
+}
+
+#bottom-content h4#questions {
+    color: gold;
+    text-shadow: 0px 2px 8px black;
 }
