--- a/projects/final-eval/css/style.css
+++ b/projects/final-eval/css/style.css
@@ -86,6 +86,13 @@ body {
     font-size: 40px;
     color: gold;
     text-shadow: 0px 2px 8px black;
+    margin: 20px 0px;
+
+}
+
+#bottom-content h4 {
+    margin: 0px;
+    margin-top: 28px;
 }
 
 #bottom-content h4#questions {
