--- a/projects/final-eval/css/style.css
+++ b/projects/final-eval/css/style.css
@@ -37,15 +37,15 @@ body {
 
 #header h1 {
     font-size: 52px;
-    margin-bottom: 0px;
-    margin-top: 0px;
+    margin: 16px 0px 8px;
     color: gold;
     text-shadow: 0px 2px 8px black;
 }
 
 #header h3 {
-    font-size: 28px;
+    font-size: 32px;
     margin-top: 0px;
+    font-weight: lighter;
 }
 
 #main-content .cards img {
