--- a/exercises/themed-gallery-page/css/style.css
+++ b/exercises/themed-gallery-page/css/style.css
@@ -95,7 +95,7 @@ body {
 
 @media screen and (max-width: 1090px) {
     body {
-        background-color: gold;
+        /* background-color: gold; */
     }
 
     #navbar a {
@@ -105,7 +105,7 @@ body {
 
 @media screen and (max-width: 1000px) {
     body {
-        background-color: aqua;
+        /* background-color: aqua; */
     }
 
     #navbar h2 {
@@ -119,7 +119,7 @@ body {
 
 @media screen and (max-width: 915px) {
     body {
-        background-color: bisque;
+        /* background-color: bisque; */
     }
 
     #navbar {
