--- a/projects/ecommerce-site/css/style.css
+++ b/projects/ecommerce-site/css/style.css
@@ -264,8 +264,7 @@ body {
     justify-content: center;
     gap: 68px;
     padding: 48px 0px;
-    margin-top: 100px;
-     
+    margin-top: 50px;
 }
 
 #content-cards .card-image {
@@ -305,6 +304,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 36px;
+    margin-bottom: 50px;
 }
 
 .explore-card-img {
@@ -406,4 +406,29 @@ body {
     color: #6400e6;
     margin-top: 100px;
     margin-bottom: 0px;
+}
+
+/* FOOTER css */
+
+#footer {
+    background-color: #6f00ff;
+    margin-top: 150px;
+    box-shadow:  0px 0px 16px #6400e6;
+}
+
+#footer #footer-content-container {
+    max-width: 1400px;
+    margin: 0px auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#footer .about-footer {
+    display: grid;
+    grid-auto-rows: 1fr;
+    padding-top: 24px;
+    padding-left: 24px;
+    gap: 24px;
+    margin-bottom: 100px;
 }
