--- a/projects/ecommerce-site/css/style.css
+++ b/projects/ecommerce-site/css/style.css
@@ -422,6 +422,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    color: white;
 }
 
 #footer .about-footer {
